--- a/UnicornOverlord/MainWindow.xaml
+++ b/UnicornOverlord/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:UnicornOverlord"
         mc:Ignorable="d"
 		WindowStartupLocation="CenterScreen"
-        Title="Unicorn Overlord(Nintendo Switch)" Height="450" Width="650">
+        Title="Unicorn Overlord(Nintendo Switch)" Height="450" Width="700">
 	<Window.Resources>
 		<local:ItemIDConverter x:Key="ItemIDConverter"/>
 		<local:ClassIDConverter x:Key="ClassIDConverter"/>
@@ -46,7 +46,8 @@
 				<Grid>
 					<Grid.ColumnDefinitions>
 						<ColumnDefinition/>
-						<ColumnDefinition Width="2*"/>
+						<ColumnDefinition/>
+						<ColumnDefinition/>
 					</Grid.ColumnDefinitions>
 					<DockPanel>
 						<Grid DockPanel.Dock="Bottom">
@@ -64,7 +65,7 @@
 							<Button Grid.Column="2" Content="Insert"
 									Command="{Binding InsertCharacterCommand}"/>
 						</Grid>
-						<ListBox Name="ListBoxCharacter" ItemsSource="{Binding Characters}"/>
+						<ListBox Name="ListBoxCharacter" ItemsSource="{Binding Characters}" DisplayMemberPath="ID"/>
 					</DockPanel>
 					<Grid Grid.Column="1">
 						<Grid.ColumnDefinitions>
@@ -119,6 +120,22 @@
 						<Label Grid.Row="12" Content="SpeedPlus"/>
 						<TextBox Grid.Row="12" Grid.Column="1" Text="{Binding ElementName=ListBoxCharacter, Path=SelectedItem.SpeedPlus, UpdateSourceTrigger=PropertyChanged}"/>
 					</Grid>
+					<TabControl Grid.Column="2">
+						<TabItem Header="Bond">
+							<ListBox ItemsSource="{Binding ElementName=ListBoxCharacter, Path=SelectedItem.Bonds}">
+								<ListBox.ItemTemplate>
+									<DataTemplate>
+										<StackPanel Orientation="Horizontal">
+											<Label Content="ID"/>
+											<Label Content="{Binding ID}"/>
+											<Label Content="Value"/>
+											<TextBox Text="{Binding Value, UpdateSourceTrigger=PropertyChanged}" Width="50"/>
+										</StackPanel>
+									</DataTemplate>
+								</ListBox.ItemTemplate>
+							</ListBox>
+						</TabItem>
+					</TabControl>
 				</Grid>
 			</TabItem>
 			<TabItem Header="Item">
@@ -148,9 +165,9 @@
 							<DataTemplate>
 								<StackPanel Orientation="Horizontal">
 									<Label Content="???1"/>
-									<Label Content="{Binding Equipment1}" Width="30"/>
+									<Label Content="{Binding Equipment1}" Width="50"/>
 									<Label Content="???2"/>
-									<Label Content="{Binding Equipment2}" Width="30"/>
+									<Label Content="{Binding Equipment2}" Width="50"/>
 									<Button Content=" ... "
 									Command="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=local:MainWindow}, Path=DataContext.ChoiceItemCommand}"
 									CommandParameter="{Binding}"/>
