--- a/UnicornOverlord/ChoiceWindow.xaml
+++ b/UnicornOverlord/ChoiceWindow.xaml
@@ -22,6 +22,6 @@
 			<Button x:Name="ButtonDecision" Content="OK" IsEnabled="False" Click="ButtonDecision_Click"/>
 			<Button Content="Cancel" Grid.Column="1" IsCancel="True"/>
 		</Grid>
-		<ListBox x:Name="ListBoxItem" SelectionChanged="ListBoxItem_SelectionChanged" DisplayMemberPath="Name"/>
+		<ListBox x:Name="ListBoxItem" SelectionChanged="ListBoxItem_SelectionChanged" DisplayMemberPath="Name" SelectionMode="Extended"/>
 	</DockPanel>
 </Window>
