1, Multiple Selection, Edit/Delete Function are enable; 2, Change Translation method to Excel so everyone can add your own language.

--- a/UnicornOverlord/ChoiceWindow.xaml
+++ b/UnicornOverlord/ChoiceWindow.xaml
@@ -20,7 +20,7 @@
 				<ColumnDefinition/>
 			</Grid.ColumnDefinitions>
 			<Button x:Name="ButtonDecision" Content="OK" IsEnabled="False" Click="ButtonDecision_Click"/>
-			<Button Content="Cancel" Grid.Column="1" IsCancel="True"/>
+            <Button Content="Cancel" Grid.Column="1" IsCancel="True" Click="ButtonCancel_Click"/>
 		</Grid>
 		<ListBox x:Name="ListBoxItem" SelectionChanged="ListBoxItem_SelectionChanged" DisplayMemberPath="Name" SelectionMode="Extended"/>
 	</DockPanel>
