--- a/UnicornOverlord/MainWindow.xaml
+++ b/UnicornOverlord/MainWindow.xaml
@@ -7,10 +7,11 @@
 		xmlns:prop="clr-namespace:UnicornOverlord.Properties"
         mc:Ignorable="d"
 		WindowStartupLocation="CenterScreen"
-        Title="Unicorn Overlord(Nintendo Switch)" Height="450" Width="700">
+        Title="Unicorn Overlord(Nintendo Switch)" Height="500" Width="700">
 	<Window.Resources>
-		<local:ItemIDConverter x:Key="ItemIDConverter"/>
 		<local:ClassIDConverter x:Key="ClassIDConverter"/>
+		<local:ItemIDConverter x:Key="ItemIDConverter"/>
+		<local:NameIDConverter x:Key="NameIDConverter"/>
 	</Window.Resources>
 	<Window.DataContext>
 		<local:ViewModel/>
@@ -43,12 +44,15 @@
 					<Grid.RowDefinitions>
 						<RowDefinition/>
 						<RowDefinition/>
-						<RowDefinition Height="12*"/>
+						<RowDefinition/>
+						<RowDefinition Height="11*"/>
 					</Grid.RowDefinitions>
 					<Label Content="Money"/>
 					<TextBox Grid.Column="1" Text="{Binding Basic.Money, UpdateSourceTrigger=PropertyChanged}"/>
 					<Label Grid.Row="1" Content="Fame"/>
 					<TextBox Grid.Row="1" Grid.Column="1" Text="{Binding Basic.Fame, UpdateSourceTrigger=PropertyChanged}"/>
+					<Label Grid.Row="2" Content="ZENOIRA"/>
+					<CheckBox Grid.Row="2" Grid.Column="1" IsChecked="{Binding Basic.ZENOIRA}" VerticalAlignment="Center"/>
 				</Grid>
 			</TabItem>
 			<TabItem Header="Character">
@@ -74,7 +78,13 @@
 							<Button Grid.Column="2" Content="Insert"
 									Command="{Binding InsertCharacterCommand}"/>
 						</Grid>
-						<ListBox Name="ListBoxCharacter" ItemsSource="{Binding Characters}" DisplayMemberPath="ID"/>
+						<ListBox Name="ListBoxCharacter" ItemsSource="{Binding Characters}">
+							<ListBox.ItemTemplate>
+								<DataTemplate>
+									<Label Content="{Binding Name, Converter={StaticResource NameIDConverter}}"/>
+								</DataTemplate>
+							</ListBox.ItemTemplate>
+						</ListBox>
 					</DockPanel>
 					<Grid Grid.Column="1">
 						<Grid.ColumnDefinitions>
