--- a/UnicornOverlord/MainWindow.xaml
+++ b/UnicornOverlord/MainWindow.xaml
@@ -153,7 +153,7 @@
                     </Grid>
                     <TabControl Grid.Column="2">
                         <TabItem Header="Bond">
-                            <ListBox ItemsSource="{Binding ElementName=ListBoxCharacter, Path=SelectedItem.Bonds, Mode=TwoWay}">
+                            <ListBox Name="ListBoxBond" ItemsSource="{Binding ElementName=ListBoxCharacter, Path=SelectedItem.Bonds, Mode=TwoWay}">
                                 <ListBox.ItemTemplate>
                                     <DataTemplate>
                                         <StackPanel Orientation="Horizontal">
